--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# package-lock.json
+package-lock.json
+
+# next.js build output
+.next
+
 # dependencies
 /node_modules
 /.pnp
